AC_INIT(src/fasterpussycat.c)

PACKAGE=fasterpussycat
VERSION=0.0.1

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

IDN_REQUIRED_VERSION=1
CRYPTO_REQUIRED_VERSION=0.9
SSL_REQUIRED_VERSION=0.9
MAGIC_REQUIRED_VERSION=1
PKG_CHECK_MODULES(IDN, libidn >= $IDN_REQUIRED_VERSION)
AC_CHECK_HEADER(idna.h)
PKG_CHECK_MODULES(CRYPTO, libcrypto >= $CRYPTO_REQUIRED_VERSION)
PKG_CHECK_MODULES(SSL, libssl >= $SSL_REQUIRED_VERSION)
AC_CHECK_HEADER(openssl/ssl.h)
AC_CHECK_HEADER(openssl/err.h)
AC_CHECK_HEADER(openssl/md5.h)
AC_SEARCH_LIBS([sqlite3_open16], [sqlite3])
AC_CHECK_HEADER(sqlite3.h)
AC_SUBST([SQLITE3_LIBS])
AC_CHECK_LIB([magic],[magic_file],[MAGIC_LIBS=-lmagic])
AC_CHECK_HEADER(magic.h)
AC_SUBST([MAGIC_LIBS])
AC_CHECK_LIB([z],[gzread],[Z_LIBS=-lz])
AC_CHECK_HEADER(zlib.h)
AC_SUBST([Z_LIBS])
AC_CHECK_LIB([m],[log2],[M_LIBS=-lm])
AC_CHECK_HEADER(math.h)
AC_SUBST([M_LIBS])
AC_PROG_CC

AC_OUTPUT(Makefile src/Makefile)
